--- a/cloudformation/glue-workflow-stack.yml
+++ b/cloudformation/glue-workflow-stack.yml
@@ -524,6 +524,8 @@ Resources:
   Covid19Bucket:
     Type: AWS::S3::Bucket
     Properties:
+      VersioningConfiguration:
+        Status: Enabled
       BucketName: !Sub ${BucketName}-${AWS::AccountId}-${AWS::Region}
       BucketEncryption:
         ServerSideEncryptionConfiguration:
