--- a/cloudformation/codepipeline-stack.yml
+++ b/cloudformation/codepipeline-stack.yml
@@ -211,6 +211,7 @@ Resources:
                   - s3:GetObjectVersion
                   - s3:PutBucketPolicy
                   - s3:PutBucketPublicAccessBlock
+                  - s3:PutBucketVersioning
                   - s3:PutEncryptionConfiguration
                   - s3:PutObject
                   - s3:PutPublicAccessBlock
